# qt-app

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: docs.yml  linter.yml
MyQtApp/: __init__.py  __main__.py
MyQtApp/ui/: dialog.py  dialog.ui  mainwindow.ui  pitch.py  pitch.ui
requirements/: build.txt  development.txt  documentation.txt  projet.txt
